# JiMP

lab1/doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h
lab1/factorial/: Factorial.cpp  main.cpp
lab1/multiplicationtable/: MultiplicationTable.cpp  MultiplicationTable.h  MultiplicationTableShow.cpp  MultiplicationTableShow.h
lab1/palindrome/: Palindrome.cpp  Palindrome.h
lab1/reversestring/: ReverseString.cpp  ReverseString.h
lab10/: CMakeLists.txt
lab10/academiascheduler/: Scheduler.cpp  Scheduler.h  main.cpp
lab10/algorithm/: Algo.cpp  Algo.h  main.cpp
lab11/: CMakeLists.txt
lab11/factorymethod/: FactoryMethod.cpp  FactoryMethod.h  main.cpp
lab11/mean/: CMakeLists.txt  Mean.cpp  Mean.h  main.cpp
lab11/repository/: CMakeLists.txt  Repository.cpp  Repository.h
lab11/sum/: Sum.cpp  Sum.h  main.cpp
lab11/value/: CMakeLists.txt  Value.cpp  Value.h
lab12/: CMakeLists.txt
lab12/academiasequentialgenerator/: SequentialGenerator.cpp  SequentialGenerator.h
lab12/academiateacherhash/: TeacherHash.cpp  TeacherHash.h
lab12/binarytree/: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt
lab12/timerecorder/: CMakeLists.txt  TimeRecorder.cpp  TimeRecorder.h  main.cpp
lab12/tree/: Tree.cpp  Tree.h
lab12/treeiterators/: TreeIterators.cpp  TreeIterators.h  main.cpp
lab12/unorderedmap/: CMakeLists.txt  UnorderedMap.cpp  UnorderedMap.h
lab13/arabicroman/: ArabicToRoman.cpp  ArabicToRoman.h  CMakeLists.txt  RomanToArabic.cpp  RomanToArabic.h
lab13/arabictoroman/: ArabicToRoman.cpp  ArabicToRoman.h  CMakeLists.txt  main.cpp
lab2/array2D/: Array2D.cpp  Array2D.h  main.cpp
lab2/greatestproduct/: GreatestProduct.cpp  GreatestProduct.h  main.cpp
lab2/polybius/: Polybius.cpp  Polybius.h
lab2/simpleforwardlist/: SimpleForwardList.cpp  SimpleForwardList.h
lab3/ccounter/: CCounter.cpp  CCounter.h  main.cpp
lab3/minimaltimedifference/: MinimalTimeDifference.cpp  MinimalTimeDifference.h
lab3/smarttree/: SmartTree.cpp  SmartTree.h
lab3/tinyurl/: TinyUrl.cpp  TinyUrl.h
lab4/geometry/: Point.cpp  Point.h  Square.cpp  Square.h  main.cpp
lab4/netsjson/: SimpleJson.cpp  SimpleJson.h
lab4/netstemplateengine/: SimpleTemplateEngine.cpp  SimpleTemplateEngine.h
lab5/: CMakeLists.txt
lab5/XXX/: XXX.cpp  XXX.h  main.cpp  maincopy.cpp  mainmove.cpp
lab5/family/: Child.cpp  Child.h  Parent.cpp  Parent.h
lab5/martian/: CMakeLists.txt  Martian.cpp  Martian.h
lab5/matrix/: Matrix.cpp  Matrix.h
lab5/memorychunk/: MemoryChunk.cpp  MemoryChunk.h
lab5/xxx/: XXX.cpp  (+2 more)
lab6/: CMakeLists.txt
lab6/academia/: Academia.cpp  Academia.h  CMakeLists.txt  Student.cpp  Student.h  StudentRepository.cpp  StudentRepository.h  StudyYear.cpp  StudyYear.h  main.cpp
lab6/zipper/: CMakeLists.txt  Iterator.cpp  Iterator.h  Zipper.cpp  Zipper.h
lab7/academiaqueries/: CMakeLists.txt  Student.cpp  Student.h  StudentRepositoryQueries.cpp  StudentRepositoryQueries.h  StudyYear.cpp  StudyYear.h
lab8/: CMakeLists.txt
lab8/microdvdsubtitles/: CMakeLists.txt  MicroDVDSubtitles.cpp  MicroDVDSubtitles.h  main.cpp
(+26 files in other folders)
